@@ -1,3 +1,4 @@
+- added thumbnail support
 Version 0.0.2.x
 - support for folders [invoke w/ plugin://plugin.video.firedrive/?mode=folder&amp;folderID=unique_folder_id]
 - support for public URLS [invoke w/ plugin://plugin.video.firedrive/?mode=streamURL&amp;url=http://www.firedrive.com/file/#####]
